# knowledge-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: resume-achievement-writer.md  resume-ats-optimizer.md  resume-experience-miner.md  worker-fact-checker.md  worker-git-publisher.md  worker-report-writer.md
.claude/commands/: build-resume.md  para-classify.md  raw-capture.md  raw-inbox-review.md  research-report.md  schema-compile.md
.claude/memory/: wiki-link-memory.json
.claude/roles/: trader.md
.obsidian/: graph.json
00-inbox/: MY-INTEGRATIONS.md  MY-PROFILE.md
03-professional/trades/: 2026-06-14-NVDA.md  2026-06-14-RKLB.md  2026-06-14-XAUUSD.md
05-knowledge/: INDEX.md  PARA.md
05-knowledge/research/: 2026-06-07-stock-analysis-nvda-asts-now-soxl.md
05-knowledge/resources/: hermes-obsidian-second-brain.md  hermes-telegram-second-brain-pipeline.md
05-knowledge/schema/: README.md  relationships.md
07-trading-journal/: ASTS - 2026-06-07.md  BTC - 2026-06-08.md  MRVL - 2026-06-07.md  RGTI - 2026-06-07.md  SOXL - 2026-06-07.md
docs/: CONTEXT-AND-MEMORY.md  HYBRID-SECOND-BRAIN.md  RESEARCH-PIPELINE.md
integrations/hermes-telegram/: .env.example  README.md  batch_enrich.sh  capture-note.sh  capture_note.py  config.snippet.yaml  (+1 more)
mcp/research_vault/: README.md  pyproject.toml  server.py
raw/: README.md
scripts/: build_wiki_index.py  fetch_data.py  fred_mcp_wrapper.py  generate_dashboard.py  git_autocommit.sh  premarket_scanner.py  test-hybrid-cog.ps1  universe.json  wiki_graph_optimizer.py
(+34 files in other folders)
