[project]
name = "research-vault-mcp"
version = "0.1.0"
description = "MCP server exposing COG second-brain vault operations (save note, wiki-link, commit) as governed tools."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
research_vault = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
